Academy Deliver Theme: Subpage list thumbnail images now have max-width:100px; specified in the CSS to prevent @2x retina image thumbnails from appearing 50% too big.

--- a/user/themes/academydeliver/css-compiled/template.css
+++ b/user/themes/academydeliver/css-compiled/template.css
@@ -2299,7 +2299,8 @@ img.inline-left {
   margin-right: 1rem;
   float: left; }
   .subpage-item .subpage-image img {
-    border-radius: 4px; }
+    border-radius: 4px;
+    max-width: 100px; }
     @media only all and (max-width: 47.938em) {
       .subpage-item .subpage-image img {
         max-width: 33vw; } }
